# DRF_indiv

./: .gitignore  pyproject.toml  secrets.json
ToDoList/: asgi.py  settings.py  urls.py  wsgi.py
todos/: admin.py  models.py  serializers.py  urls.py  views.py
todos/migrations/: 0001_initial.py  0002_alter_todolist_completion_at.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_date_of_birth.py
