[tool.poetry]
name = "drf-indiv"
version = "0.1.0"
description = ""
authors = ["I Joo Han <juhanlee2218@gmail.com>"]
readme = "README.md"
packages = [{include = "drf_indiv"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
